--- a/lib/rumbl_web/live/post_live/index.html.leex
+++ b/lib/rumbl_web/live/post_live/index.html.leex
@@ -6,6 +6,7 @@
     title: @page_title,
     action: @live_action,
     post: @post,
+    current_user: @current_user,
     return_to: Routes.post_index_path(@socket, :index) %>
 <% end %>
 
